# rankaudit

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: design.md
src/rankaudit/: __init__.py
src/rankaudit/attribution/: __init__.py  lime_adapter.py  shap_adapter.py
src/rankaudit/bias/: __init__.py  detector.py
src/rankaudit/core/: __init__.py  pipeline.py  report.py  types.py
src/rankaudit/counterfactual/: __init__.py  engine.py
src/rankaudit/explain/: __init__.py  rank_explain.py
src/rankaudit/loaders/: __init__.py  dataframe.py  trec.py
src/rankaudit/metrics/: __init__.py  ndcg.py
tests/: test_core.py
