[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rankaudit"
version = "0.1.0"
description = "Auditing and explainability library for ranking systems"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
keywords = [
    "ranking",
    "explainability",
    "fairness",
    "information-retrieval",
    "LLM",
    "audit",
    "counterfactuals",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "numpy>=1.23",
]

[project.optional-dependencies]
shap = ["shap>=0.44"]
lime = ["lime>=0.2"]
llm = ["anthropic>=0.25"]
pandas = ["pandas>=2.0"]
all = ["shap>=0.44", "lime>=0.2", "anthropic>=0.25", "pandas>=2.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.8",
    "pandas>=2.0",
]

[project.urls]
Homepage = "https://github.com/m-np/rankaudit"
Repository = "https://github.com/m-np/rankaudit"
"Bug Tracker" = "https://github.com/m-np/rankaudit/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/rankaudit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "W", "I", "N"]

[tool.mypy]
python_version = "3.9"
strict = false
ignore_missing_imports = true
